tittles font fix, remove two backgrounds, tokenomy link changes, align launch button, go risky icons upscale

--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -129,7 +129,7 @@ nav
   cursor: pointer
   position: absolute
   right: 1%
-  top: 27%
+  top: 31%
 
 .launch-app_mobile
 
@@ -631,14 +631,14 @@ header
 //============ TokenSale ======================
 .tokenSale
   padding-bottom: 146px
-  background: url("../../../assets/landingPage/bg3.png") 90% bottom no-repeat
-  background-size: 80px 69px
+  //background: url("../../../assets/landingPage/bg3.png") 90% bottom no-repeat
+  //background-size: 80px 69px
 
 .tokenSale-left
   & h2
     font-style: normal
     font-weight: 600
-    font-size: 40px
+    font-size: 50px
     line-height: 48px
     color: #0B1511
     margin-bottom: 16px
@@ -768,7 +768,7 @@ header
 
   & h2
     font-weight: 600
-    font-size: 40px
+    font-size: 50px
     line-height: 48px
     text-align: center
     padding-bottom: 16px
@@ -1171,7 +1171,7 @@ footer
     font-family: Titillium Web
     font-style: normal
     font-weight: 600
-    font-size: 40px
+    font-size: 50px
     line-height: 48px
     text-align: center
     color: #0B1511
@@ -1630,6 +1630,9 @@ footer
 //=============social-media ==================
 #social-media
   margin-top: 85px
+
+#social
+  justify-content: center
 
 .social-media-title
   text-align: center
